Fixed Overflow issue on input screen

--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ main {
 	text-align: right;
 	font-size: 3.5rem;
 	max-width: 100%;
-	overflow: hidden;
+	overflow: auto;
 }
 
 .input-screen {
